# tttrlib

./: .CMakeLists.txt.swp  .appveyor.yml  .buildinfo  .condarc  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS  BUILDING.md  CHANGELOG.md  CHANGES.md  CMakeLists.txt  COPYING  Correlation.html  LICENSE  LICENSE.txt  README.md  TODO  TODO.md  TODOS  correlation.html  cpp_api.html  environment.yaml  environment.yml  genindex.html  glossary.html  header_data.html  histograms.html  imaging.html  imaging_analyzing_clsm_marker_leica_sp8.html  index.html  installation.html  motivation.html  objects.inv  pyproject.toml  references.html  (+9 more)
.gitlab/: .gitlab-webide.yml
_sources/: correlation.rst.txt  glossary.rst.txt  imaging.rst.txt  index.rst.txt  installation.rst.txt  motivation.rst.txt  references.rst.txt  single_molecule.rst.txt  tools.rst.txt  tttr_objects.rst.txt  zreferences.rst.txt
api/: annotated.html  class_c_l_s_m_frame-members.html  class_c_l_s_m_frame.html  class_c_l_s_m_image-members.html  class_c_l_s_m_image.html  class_c_l_s_m_line-members.html  class_c_l_s_m_line.html  class_c_l_s_m_pixel-members.html  class_c_l_s_m_pixel.html  class_correlator-members.html  class_correlator.html  class_header-members.html  class_header.html  class_histogram-members.html  class_histogram.html  class_histogram_axis-members.html  class_histogram_axis.html  class_pda-members.html  class_pda.html  class_t_t_t_r-members.html  class_t_t_t_r.html  class_t_t_t_r_range-members.html  class_t_t_t_r_range.html  classes.html  correlate_8h.html  correlate_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  header_8h_source.html  hierarchy.html  histogram_8h_source.html  image_8h_source.html  index.html  menudata.js  pda_8h_source.html  (+37 more)
auto_examples/: index.html
benchmarks/: clsm.py  tttr_read.py
bioconda-recipe/: build.sh  meta.yaml
build_tools/: BUILD_INSTRUCTIONS.md
cmake/: FindConda.cmake  FindCondaBoost.cmake  FindFFTW.cmake  FindHDF5.cmake  FindMKL.cmake  FindPython.cmake  TTTRLibFindPython.cmake  simd.cmake
conda-recipe/: app_wrapper.c  bld.bat  build.sh  conda_build_config.yaml  meta.yaml  meta_imp_2.14.yaml
dev/: .buildinfo  about.html  changes.html  configuration.html  contents.html  faq.html  getting-started.html  glossary.html  imaging.html  index.html  install.html  objects.inv  performance_guide.html  preface.html  quickstart.html  roadmap.html  search.html  searchindex.js  sg_execution_times.html  single_molecule.html  support.html  tools.html  tools.ipynb  troubleshooting.html  tttr.html  user_guide.html  verbosity.html  whats_new.html  zreferences.html
doc/: Doxyfile  Makefile  README.md  about.ipynb  about.rst  api.rst  applications.rst  changes.rst  compilation.rst  conf.py  contents.rst  correlation.rst  environment.yml  examples.rst  (+30 more)
ext/: CMakeLists.txt  documentation.i
ext/imagej/: Inverter.i
ext/python/: BurstFeatureExtractor.i  BurstFilter.i  CLSM.i  CLSMFrame.py  CLSMISM.i  CLSMISM.py  CLSMImage.py  Channel.i  Correlator.i  Correlator.py  CorrelatorCurve.py  DecayConvolution.i  DecayFit.i  DecayFit23.i  DecayFit23.py  DecayFit24.i  DecayFit24.py  DecayFit25.i  DecayFit25.py  DecayFit26.i  DecayFit26.py  DecayLvArrays.i  DecayPhasor.i  FileCheck.i  Fit2x.py  Histogram.i  ImageLocalizer.py  Localization.i  MicrotimeLinearization.i  Pda.i  Pda.py  TTTR.i  TTTR.py  TTTRHeader.i  TTTRHeader.py  TTTRHeader_ext.py  TTTRMask.i  TTTRMask.py  TTTRRange.i  TTTRSelection.i  (+18 more)
ext/python/correlation/: correlator.py
ext/python/decay/: decay_extension.py
ext/python/image/: image_extension.py
ext/python/pda/: pda_extension.py
ext/python/tttr/: tttr_extension.py
pyext/: CMakeLists.txt  correlate.i  documentation.i  histogram.i  image.i  pda.i  tttr.i  tttrlib.i
test/: CMakeLists.txt  TEST_DATA_SETUP.md  broken_03_clsm.py  broken_04_clsm.py  conftest.py  download_test_data.py  download_verify_test_data.py  pyext_test.py  settings.json  test_00_tttr.py  test_01_correlation.py  test_02_convert.py  test_03_clsm.py  test_04_clsm.py  test_05_pda.py  test_06_decay.py  test_CLSM_01.py  test_CLSM_02.py  test_CLSM_aberior_sted.py  test_CLSM_bh_markers.py  test_CLSM_metadata.py  test_CLSM_split_by_channel.py  test_CLSM_transform.py  test_Correlator.py  test_DecayFit23.py  test_DecayFit24.py  test_DecayFit25.py  test_DecayFit26.py  test_DecayFitMLEWrapper.py  test_DecayLvArrays.py  test_Pda.py  test_TTTR.py  test_TTTRMask.py  test_TTTR_extended_coverage.py  test_TTTR_transcode.py  test_avx_convolution_correctness.py  test_bh_helpers.py  test_burst_search_cusum.py  test_burstfeature_json_empty.py  test_burstfeature_numpy_shapes.py  (+62 more)
test/benchmarks/: clsm.py  tttr_read.py
test/data/BH/: BH_SPC132.spc
test/data/BH/BH_SPC132_smDNA/: m002.spc  m006.spc  m007.spc  m009.spc
test/data/BH/correlator_references/BH_SPC132/08/: MCSg_s--g_p.inf
test/data/BH/correlator_references/BH_SPC132/80/: MCSg_p--g_s.inf
test/data/bh/bh_spc132_sm_dna/: m000.spc  m001.spc  m003.spc  m004.spc  m005.spc  m008.spc  m010.spc
test/data/bh/correlator_references/bh_spc132/08/: MCSg_s--g_p.cor
test/data/bh/correlator_references/bh_spc132/80/: MCSg_p--g_s.cor
test/data/imaging/ics/: RICS_EGFPGFP.tif
test/data/imaging/pq/Microtime200_HH400/: beads.ptu
test/data/imaging/pq/Microtime200_TH260/: INFO.txt
test/data/imaging/pq/ht3/: INFO.txt
test/data/reference/: bh_spc132.npz  bh_spc630_256.npz  img_decay_histogram.npy  img_decay_mean_tau.npy  img_intensity_image_sp5.npy  img_ref_clsm_binning.tif  img_ref_decay_image.npy  img_ref_intensity.npy  img_ref_mean_tac.npy  img_ref_mean_tac_sp8.npy
test/data/references/: bh_spc132.npz  bh_spc630_256.npz
test/dev/: test_02_convert.py  test_CLSM_aberior_sted.py  test_Localization.py  test_clsm_corr.py  test_clsm_shift.py
test/fail/: test_clsm.py
test/misc/: compute_irf.py
test/references/: BH_SPC132.npz  BH_SPC630_256.npz
test/stage/: new_tests.py  test_clsm_corr.py
(+1931 files in other folders)
